Fix bug causing search results to be invisible. (#341)
Fixes #335

--- a/gnome-shell/src/gnome-shell-sass/_common.scss
+++ b/gnome-shell/src/gnome-shell-sass/_common.scss
@@ -1404,7 +1404,7 @@ StScrollBar {
   }
 
   #searchResultsContent {
-    min-width: 1000px;
+    max-width: 1000px;
     padding-left: 20px;
     padding-right: 20px;
     spacing: 16px;
